--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
