--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
