--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
 Flask==3.1.0
+flask-cors==5.0.1
 Flask-PyMongo==2.3.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
