--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,15 +1,23 @@
-events {}
+# events {}
 
-http {
-    server {
-        listen 80;
-        server_name localhost;
+# http {
+#     server {
+#         listen 80;
+#         server_name localhost;
 
-        root /usr/share/nginx/html;
-        index index.html;
+#         root /usr/share/nginx/html;
+#         index index.html;
 
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-    }
-}
+#         location / {
+#             try_files $uri $uri/ /index.html;
+#         }
+
+#         error_page 404 /index.html;
+
+#         location /static/ {
+#             # Serve static files
+#             expires 1y;
+#             add_header Cache-Control "public";
+#         }
+#     }
+# }
